[package]
name = "async-web-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
scraper = "0.12"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

actix-web = "4"              # Web framework
actix-rt = "2"               # Actix runtime